--- a/Flagrum.Web/Features/WorkshopMods/Editor/ModelReplacement.razor
+++ b/Flagrum.Web/Features/WorkshopMods/Editor/ModelReplacement.razor
@@ -173,6 +173,8 @@
             }
 
             Context.SaveChanges();
+            Context.ChangeTracker.Clear();
+            
             Navigation.NavigateTo("/mod/configure/frompreset");
         }
     }
