docs: fix readme, update 1.6.0 changelog
Fixes the broken image links on the README. Adds the rest of the patch notes to the 1.6.0 changelog fragment.

--- a/src/Flagrum.Application/Features/Menu/Modals/NewsModal.razor
+++ b/src/Flagrum.Application/Features/Menu/Modals/NewsModal.razor
@@ -21,8 +21,16 @@
                 I am pleased to announce that Flagrum is once again fully open-source!<br/><br/>
                 Prior to now, the public codebase had not been updated for quite some time due to the implementation<br/>
                 of Patreon benefits, and the need to protect that code from malicious actors. I finally found the time<br/>
-                to perform a large scale rewrite to separate these benefits from the main codebase.<br/><br/>
+                to perform a large scale rewrite to separate these benefits from the main codebase.
+            </span>
+
+            <strong class="text-accent1-400 bg-accent1-800 p-4 border border-accent1-400 block my-6">
+                Due to the size of this rewrite, there is a possibility that bugs may have been introduced.<br/>
+                If you encounter any problems, please report them on GitHub so I can fix them promptly.<br/>
+                Thank you for your understanding.
+            </strong>
                 
+            <span>
                 As intended, Flagrum has now been returned to the public domain to continue serving the modding community.<br/>
                 You can find the <Hyperlink Text="Flagrum codebase" Uri="https://github.com/Kizari/Flagrum"/> on GitHub
                 where it has always been, now fully up-to-date!
