fix: prevent unobserved exceptions in bulk export
Sometimes the bulk export in the asset explorer could throw an exception in the asynchronous task, which was unfortunately causing the export to fail silently with no feedback to the user due to an oversight.

This commit changes all the file and folder dialogs in IPlatformService to accept a Task as a callback rather than a void function, so that asynchronous callbacks can be used and properly observed. As such, all calls to these methods have been updated accordingly.

--- a/src/Flagrum.Application/Features/AssetExplorer/Export/ExportContextMenu.razor
+++ b/src/Flagrum.Application/Features/AssetExplorer/Export/ExportContextMenu.razor
@@ -138,7 +138,7 @@
             _ => defaultFileName
         };
 
-        await PlatformService.OpenSaveFileDialogAsync(defaultFileName, filter, path =>
+        await PlatformService.OpenSaveFileDialogAsync(defaultFileName, filter, async path =>
         {
             byte[] data;
 
@@ -164,24 +164,9 @@
                 case ExplorerItemType.Xml:
                 {
                     var extension = path.Split('.').Last();
-                    if (extension == "xml")
-                    {
-                        data = EbonyXmlHelper.ToXml(item.Data);
-                    }
-                    else
-                    {
-                        data = item.Data;
-                    }
-
+                    data = extension == "xml" ? EbonyXmlHelper.ToXml(item.Data) : item.Data;
                     break;
                 }
-                case ExplorerItemType.Unspecified:
-                case ExplorerItemType.Unsupported:
-                case ExplorerItemType.Directory:
-                case ExplorerItemType.Material:
-                case ExplorerItemType.Model:
-                case ExplorerItemType.Text:
-                case ExplorerItemType.AnimationPackage:
                 default:
                     path = path.Replace("." + trueExtension, "");
                     path += "." + trueExtension;
@@ -189,7 +174,7 @@
                     break;
             }
 
-            File.WriteAllBytes(path, data);
+            await File.WriteAllBytesAsync(path, data);
         });
     }
 
