--- a/src/Flagrum.Application/Features/ModManager/Editor/EditorInstructionRow.razor
+++ b/src/Flagrum.Application/Features/ModManager/Editor/EditorInstructionRow.razor
@@ -123,7 +123,7 @@
             instruction.FilePath = path;
             instruction.FileLastModified = 0;
             Parent.SetHasChanged();
-            InvokeAsync(StateHasChanged);
+            return InvokeAsync(StateHasChanged);
         });
     }
 }
